# Minimalist-TaichiAOT

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.py  merge-archives.sh
scripts/: __android_main.sh  build-minimal-static.py  build-taichi-android.ps1  build-taichi-android.sh  build-taichi-ios.sh  build-taichi-linux.sh  build-taichi-macos.sh  build-taichi-windows.ps1  run-android.sh  run-host.sh  run-linux.sh  run-macos.sh  run-windows.ps1
